Implemented SetDownloadFolderPath that prompts the user for a path and sets it as the  download folder. Implemented a bit of error handling

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,28 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%reset -f\n",
     "import requests\n",
     "import json\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "from webdriver_manager.microsoft import EdgeChromiumDriverManager\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "from webdriver_manager.firefox import GeckoDriverManager\n",
-    "\n",
     "from selenium.webdriver.edge.service import Service as EdgeService\n",
+    "from selenium.webdriver import EdgeOptions\n",
+    "\n",
+    "\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.chrome.service import Service as ChromeService\n",
+    "from selenium.webdriver import ChromeOptions\n",
+    "\n",
+    "from webdriver_manager.firefox import GeckoDriverManager\n",
     "from selenium.webdriver.firefox.service import Service as FirefoxService\n",
+    "from selenium.webdriver import FirefoxOptions\n",
+    "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "\n",
+    "\n",
     "import webbrowser\n",
     "import time\n",
+    "\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "from os import mkdir\n",
+    "\n",
     "\n",
     "\n",
     "home_url = \"https://animepahe.ru/\"\n",
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -81,17 +92,44 @@
     "            for index, result in enumerate(results):\n",
     "                if index == index_of_chosen_anime:\n",
     "                    anime_id = result[\"session\"]\n",
-    "                    return anime_id\n",
+    "                    anime_title = result[\"title\"]\n",
+    "                    return anime_id, anime_title\n",
     "        else:\n",
     "            print(\"\\nInvalid number Senpwai\")\n",
     "\n",
-    "anime_id = AnimeSelection(results)\n",
+    "anime_id, anime_title = AnimeSelection(results)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SetDownloadFolderPath(anime_title):\n",
+    "    \n",
+    "    root = tk.Tk()\n",
+    "    root.withdraw()\n",
+    "\n",
+    "# Prompt the user to choose a folder directory\n",
+    "    folder_path = filedialog.askdirectory(title=\"Choose folder to put the downloaded anime\")\n",
+    "    download_folder = folder_path+\"/\"+anime_title\n",
+    "    download_folder = download_folder.replace(\"/\", \"\\\\\\\\\")\n",
+    "    mkdir(download_folder)\n",
+    "    return download_folder\n",
+    "\n",
+    "\n",
+    "\n",
+    "#download_folder_path = SetDownloadFolderPath(anime_title)\n",
+    "download_folder_path = \"C:\\\\Anime\\\\\"+anime_title\n",
+    "mkdir(download_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -239,75 +277,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Downloading: 16.9kB [00:00, 8.65MB/s]                   \n"
+      "[WDM] - Downloading: 16.9kB [00:00, 5.78MB/s]                   \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All downloads completed succesfully\n"
      ]
     }
    ],
    "source": [
-    "def DownloadEpisodes(configured_download_links):\n",
     "\n",
+    "#Automates download process\n",
+    "def DownloadEpisodes(configured_download_links, download_folder_path):\n",
+    "\n",
+    "\n",
+    "#Checks whether user is using supported browser then creates a webdriver object of the respective browser and returns it\n",
     "    def SupportedBrowserCheck():\n",
-    "        service_edge = EdgeService(executable_path=EdgeChromiumDriverManager().install())\n",
-    "        service_chrome = ChromeService(executable_path=ChromeDriverManager().install())\n",
-    "        service_firefox = FirefoxService(executable_path=GeckoDriverManager().install())\n",
+    "\n",
+    "        edge_options = EdgeOptions()\n",
+    "        chrome_options = ChromeOptions()\n",
+    "        firefox_options = FirefoxOptions()\n",
+    "\n",
+    "        edge_options.add_argument(\"--headless=new\")\n",
+    "        chrome_options.add_argument(\"--headless=new\")\n",
+    "        firefox_options.add_argument(\"--headless=new\")\n",
+    "\n",
+    "        edge_options.add_experimental_option(\"prefs\", {\n",
+    "            \"download.default_directory\": download_folder_path,\n",
+    "            \"download.prompt_for_download\": False,\n",
+    "            \"download.directory_upgrade\": True,\n",
+    "            \"safebrowsing_for_trusted_sources_enabled\": False,\n",
+    "            \"safebrowsing.enabled\": False\n",
+    "        })\n",
+    "\n",
+    "        chrome_options.add_experimental_option(\"prefs\", {\n",
+    "            \"download.default_directory\": download_folder_path,\n",
+    "            \"download.prompt_for_download\": False,\n",
+    "            \"download.directory_upgrade\": True,\n",
+    "            \"safebrowsing_for_trusted_sources_enabled\": False,\n",
+    "            \"safebrowsing.enabled\": False\n",
+    "        })\n",
+    "\n",
+    "    \n",
+    "#Installs Browser Driver Managers for the respective browsers, this is to be used by Selenium\n",
     "        try:\n",
-    "            driver_chrome = webdriver.Chrome(service=service_chrome)\n",
+    "            service_edge = EdgeService(executable_path=EdgeChromiumDriverManager().install())\n",
+    "            service_chrome = ChromeService(executable_path=ChromeDriverManager().install())\n",
+    "            service_firefox = FirefoxService(executable_path=GeckoDriverManager().install())\n",
+    "        \n",
+    "        except:\n",
+    "            return 0\n",
+    "\n",
+    "#Checks whether user is using a supported browser then returns a webdriver object for the respective used browser\n",
+    "        try:\n",
+    "            driver_chrome = webdriver.Chrome(service=service_chrome, options=chrome_options)\n",
     "            return driver_chrome\n",
     "        except:\n",
     "            try:\n",
-    "                driver_edge = webdriver.Edge(service=service_edge)\n",
+    "                driver_edge = webdriver.Edge(service=service_edge, options=edge_options)\n",
     "                return driver_edge\n",
     "            except:\n",
     "                try:\n",
-    "                    driver_firefox = webdriver.Firefox(service=service_firefox)\n",
+    "                    driver_firefox = webdriver.Firefox(service=service_firefox, options=firefox_options)\n",
+    "                    print(\"Setting default anime download location is unsupported in firefox, so check your default browser download location\")\n",
     "                    return driver_firefox\n",
     "                except:\n",
     "                    print(\"Sowwy the onwy supported browses are Chrome, Edge and Firefox\")\n",
     "                    webbrowser.open_new(\"https://google.com/chrome\")\n",
     "\n",
-    "\n",
     "    browser_page = SupportedBrowserCheck()\n",
+    "    \n",
     "    for configured_download_link in configured_download_links:\n",
-    "        browser_page.get(configured_download_link)\n",
-    "        time.sleep(6)\n",
-    "        soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
-    "        server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
+    "        try:\n",
+    "            browser_page.get(configured_download_link)\n",
+    "            time.sleep(6)\n",
+    "            soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
+    "            server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
     "\n",
-    "        browser_page.get(server_download_link)\n",
-    "        \n",
-    "        server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
-    "        download = browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
+    "            browser_page.get(server_download_link)\n",
+    "            \n",
+    "            server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
+    "            browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
+    "        except:\n",
+    "            return 0\n",
+    "    return 1\n",
     "\n",
     "\n",
-    "DownloadEpisodes(configured_download_links)\n"
+    "def DownloadStatus(download_status):\n",
+    "    if download_status:\n",
+    "        return \"All downloads completed succesfully, Senpwai ga saikyou no stando Da MUDA\"\n",
+    "    elif not download_status:\n",
+    "        return \"Error while trying to download, you probably don't have an internet connection, Baka. Please try again uWu\"\n",
+    "\n",
+    "\n",
+    "print(DownloadStatus(DownloadEpisodes(configured_download_links, download_folder_path)))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://kwik.cx/f/8fIarY2yLRP2'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "server_download_link"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
