Quality of life - implemented SaveSettings  module that saves user download settings, also tweaked DownloadSettings and added SettingsPrompt to enable this goal

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,8 @@
     "\n",
     "\n",
     "#download_folder_path = SetDownloadFolderPath(anime_title)\n",
-    "download_folder_path = \"C:\\\\Anime\\\\\"+anime_title\n",
+    "anime_folder_path = \"C:\\\\Anime\"\n",
+    "download_folder_path = \"\\\\\"+anime_title\n",
     "try:\n",
     "    os.mkdir(download_folder_path)\n",
     "except:\n",
@@ -190,54 +191,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Prompts the user for the settings of their downloads, the quality and whether subbed or dubbed\n",
     "\n",
-    "def DownloadSettings():\n",
+    "def DownloadSettings(quality=\"69\", sub_or_dub=\"69\"):\n",
     "\n",
-    "    met_conditions = 0\n",
     "    def quality_chooser(quality):\n",
     "        if quality == \"360p\" or quality == \"360\":\n",
-    "            return 0\n",
+    "            return \"360\"\n",
     "        elif quality == \"720p\" or quality ==\"720\":\n",
-    "            return 1\n",
+    "            return \"720\"\n",
     "        elif quality == \"1080p\" or quality ==\"1080\":\n",
-    "            return 2\n",
+    "            return \"1080\"\n",
     "        else:\n",
     "            return \"error\"\n",
     "    \n",
     "    def sub_or_dubber(sub_or_dub):\n",
     "        if sub_or_dub == \"sub\" or sub_or_dub == \"s\":\n",
-    "            return 1\n",
-    "        elif sub_or_dub == \"dub\" or sub_or_dub == \"dub\":\n",
-    "            return 0\n",
+    "            return \"sub\"\n",
+    "        elif sub_or_dub == \"dub\" or sub_or_dub == \"d\":\n",
+    "            return \"dub\"\n",
     "        else:\n",
-    "            return \"error\"\n",
+    "           return \"error\"\n",
+    "\n",
+    "    return (quality_chooser(quality), sub_or_dubber(sub_or_dub))\n",
+    "    \n",
     "\n",
     "    \n",
-    "    quality = 69\n",
-    "    sub_or_dub = 69\n",
     "\n",
+    "def SettingsPrompt():\n",
+    "    met_conditions = 0 \n",
+    "    quality = \"\"\n",
+    "    sub_or_dub = \"\"\n",
     "    while met_conditions < 2:\n",
-    "        while quality_chooser(quality) == \"error\":\n",
-    "            quality = input(\"What quality do you want to download in Senpwai uWu? 360p, 720p or 1080p> \")\n",
-    "        quality = quality_chooser(quality)\n",
+    "        while DownloadSettings(quality=quality)[0] == \"error\":\n",
+    "            quality = input(\"What quality do you want to download in Senpwai uWu? 360p, 720p or 1080p> \").lower()\n",
     "        met_conditions+=1\n",
     "\n",
-    "        while sub_or_dubber(sub_or_dub) == \"error\":\n",
+    "        while DownloadSettings(sub_or_dub=sub_or_dub)[1] == \"error\":\n",
     "            sub_or_dub = input(\"Sub or dub> \").lower()\n",
-    "        sub_or_dub = sub_or_dubber(sub_or_dub)\n",
     "        met_conditions+=1\n",
-    "\n",
     "    return quality, sub_or_dub\n",
     "\n",
     "\n",
-    "quality, sub_or_dub = DownloadSettings()\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Would you like to uWuse the following swaved settings?\n",
+      "quality: 360p\n",
+      "sub\n"
+     ]
+    }
+   ],
+   "source": [
+    "def SaveSettings():\n",
+    "    senpwai_stuff_path = anime_folder_path+\"\\\\Senpwai_stuff\"\n",
+    "\n",
+    "    try:\n",
+    "        os.mkdir(senpwai_stuff_path)\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "    config_path = pathlib.Path(senpwai_stuff_path+\"\\\\config.txt\")\n",
+    "    quality = \"\"\n",
+    "    sub_or_dub = \"\"\n",
+    "\n",
+    "#if there is a config file then prompt the user on whether they want to use the saved settings\n",
+    "    if config_path.is_file():\n",
+    "        print(\"Would you like to uWuse the following swaved settings?\")\n",
+    "        with open(config_path) as config_file:\n",
+    "            config_settings = json.load(config_file)\n",
+    "            print(f\"quality: {config_settings['quality']}p\")\n",
+    "            print(f\"{config_settings['sub_or_dub']}\")\n",
+    "        reply = input(\"> \")\n",
+    "        if len([y for y in yes_list if y == reply]):\n",
+    "            quality, sub_or_dub = config_settings[\"quality\"], config_settings[\"sub_or_dub\"]\n",
+    "            quality, sub_or_dub = DownloadSettings(quality=quality)[0], DownloadSettings(sub_or_dub=sub_or_dub)[1]\n",
+    "        elif len([n for n in no_list if n == reply]) > 0:\n",
+    "\n",
+    "            quality, sub_or_dub = SettingsPrompt()\n",
+    "            save_dict = {\"quality\": quality, \"sub_or_dub\": sub_or_dub}\n",
+    "            with open(config_path, \"w\") as config_file   :\n",
+    "                json.dump(save_dict, config_file)\n",
+    "\n",
+    "    elif not config_path.is_file():\n",
+    "        quality, sub_or_dub = SettingsPrompt()\n",
+    "        save_dict = {\"quality\": quality, \"sub_or_dub\": sub_or_dub}\n",
+    "        with open(config_path, \"w\") as config_file   :\n",
+    "            json.dump(save_dict, config_file)\n",
+    "        \n",
+    "    return quality, sub_or_dub\n",
+    "\n",
+    "\n",
+    "\n",
+    "quality, sub_or_dub = SaveSettings()"
    ]
   },
   {
@@ -256,17 +323,15 @@
    "source": [
     "#Generates new download links and download sizes for the episodes based off the user's configured settings\n",
     "def ConfigureDownloadData(download_links, download_sizes, quality, sub_or_dub):\n",
-    "    if sub_or_dub:\n",
-    "        print(\"sub\")\n",
+    "    if sub_or_dub == \"sub\":\n",
     "        configured_download_links = [episode_links[:3] for episode_links in download_links]\n",
     "        configured_download_sizes = [episode_links[:3] for episode_links in download_sizes]\n",
-    "    elif not sub_or_dub:\n",
+    "    elif sub_or_dub == \"dub\":\n",
     "        if len(download_links[0]) == 3:\n",
     "            print(\"There seems to be no dub for this anime, switching to sub\")\n",
     "            configured_download_links = [episode_links[:3] for episode_links in download_links]\n",
     "            configured_download_sizes = [episode_links[:3] for episode_links in download_sizes]\n",
     "        elif len(download_links[0]) == 6:\n",
-    "            print(\"dub\")\n",
     "            configured_download_links = [episode_links[3:] for episode_links in download_links]\n",
     "            configured_download_sizes = [episode_links[3:] for episode_links in download_sizes]\n",
     "\n",
@@ -524,7 +589,6 @@
     "        return \"Error while trying to download, you probably don't have an internet connection, Baka. Please try again uWu\"\n",
     "\n",
     "\n",
-    "#prompt_reply = ReallyDownloadPrompt(configured_download_sizes)\n",
     "\n",
     "prompt_reply = input(f\"The total download size is {DownloadSizeCalculator(configured_download_sizes, download_folder_path)} MB\")\n",
     "prompt_reply = \"yes\"\n",
@@ -537,6 +601,13 @@
     "    print(\"Sadge :(\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
