Progress bar - implemented a boot-leg progress bar to track download progress. tqdm.notebook stead of tqdm is imported cause I wrote this commit while still in jupyter notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Enabling notebook extension jupyter-js-widgets/extension...\n",
+      "      - Validating: ok\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -38,6 +47,9 @@
     "\n",
     "import pathlib\n",
     "\n",
+    "!jupyter nbextension enable --py widgetsnbextension\n",
+    "from tqdm.notebook import tqdm_notebook as tqdm\n",
+    "\n",
     "home_url = \"https://animepahe.ru/\"\n",
     "anime_url = home_url+\"anime/\"\n",
     "api_url_extension = \"api?m=\"\n",
@@ -47,6 +59,10 @@
     "\n",
     "yes_list = [\"yes\", \"yeah\", \"1\", \"y\"]\n",
     "no_list = [\"no\", \"nope\", \"0\", \"n\"]\n",
+    "\n",
+    "anime_folder_path = \"C:\\\\Anime\"\n",
+    "\n",
+    "\n",
     "\n",
     "#keyword = input(\"Enter the name of the anime you want to download> \")\n",
     "keyword = \"Bluelock\"\n",
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -97,15 +113,25 @@
     "            print(\"\\nInvalid number Senpwai\")\n",
     "\n",
     "anime_id, anime_title = AnimeSelection(results)\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Anime\\\\Blue Lock'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def SetDownloadFolderPath(anime_title):\n",
     "    \n",
@@ -125,22 +151,26 @@
     "\n",
     "\n",
     "#download_folder_path = SetDownloadFolderPath(anime_title)\n",
-    "anime_folder_path = \"C:\\\\Anime\"\n",
-    "download_folder_path = \"\\\\\"+anime_title\n",
+    "\n",
+    "download_folder_path = anime_folder_path+anime_title\n",
     "try:\n",
     "    os.mkdir(download_folder_path)\n",
+    "    \n",
     "except:\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "download_folder_path = anime_folder_path+\"\\\\\"+anime_title\n",
+    "download_folder_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "#Issues a GET command to the server together with the id of the anime and returns a list of the links(not donwload links) to all the episodes of that anime\n",
+    "#Issues a GET request to the server together with the id of the anime and returns a list of the links(not donwload links) to all the episodes of that anime\n",
     "def EpisodeLinks(anime_id):\n",
     "    response = requests.get(home_url+api_url_extension+\"release&id=\"+anime_id+\"&sort=episode_asc\")\n",
     "    episode_data = json.loads(response.content.decode(\"UTF-8\"))[\"data\"]\n",
@@ -148,12 +178,15 @@
     "    episode_links = [home_url+\"play/\"+anime_id+\"/\"+str(episode_session) for episode_session in episode_sessions]\n",
     "    return episode_links\n",
     "\n",
-    "episode_links = EpisodeLinks(anime_id)"
+    "try:\n",
+    "    episode_links = EpisodeLinks(anime_id)\n",
+    "except:\n",
+    "    print(\"Baka you do not have an internet connection, please twy agwain\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +298,7 @@
    ],
    "source": [
     "def SaveSettings():\n",
-    "    senpwai_stuff_path = anime_folder_path+\"\\\\Senpwai_stuff\"\n",
+    "    senpwai_stuff_path = anime_folder_path+\"\\\\Senpwai stuff\"\n",
     "\n",
     "    try:\n",
     "        os.mkdir(senpwai_stuff_path)\n",
@@ -304,25 +337,25 @@
     "\n",
     "\n",
     "\n",
-    "quality, sub_or_dub = SaveSettings()"
+    "quality, sub_or_dub = SaveSettings()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sub\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Generates new download links and download sizes for the episodes based off the user's configured settings\n",
     "def ConfigureDownloadData(download_links, download_sizes, quality, sub_or_dub):\n",
+    "    def quality_initialiser(quality):\n",
+    "        if quality == \"360\":\n",
+    "            return 0\n",
+    "        elif quality == \"720\":\n",
+    "            return 1\n",
+    "        elif quality == \"1080\":\n",
+    "            return 2\n",
+    "    quality = quality_initialiser(quality)\n",
     "    if sub_or_dub == \"sub\":\n",
     "        configured_download_links = [episode_links[:3] for episode_links in download_links]\n",
     "        configured_download_sizes = [episode_links[:3] for episode_links in download_sizes]\n",
@@ -357,42 +390,20 @@
     "    tmpDeleter(download_folder_path)\n",
     "    files = pathlib.Path(download_folder_path).glob(\"*\")\n",
     "    file_count = len(list(files))\n",
-    "    print(configured_download_sizes)\n",
     "    download_size = sum(configured_download_sizes[file_count:])\n",
     "    return download_size\n",
-    "    \n",
-    "     \n",
-    "        \n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1915"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[162, 119, 126, 130, 136, 141, 133, 124, 147, 170, 133, 99, 184, 137, 147, 124, 164, 164, 130, 163, 171, 182, 117]\n",
       "I will try my best to skip files that are already downloaded, Gambarimasu\n",
       "Let me cook\n"
      ]
@@ -401,14 +412,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Downloading: 16.9kB [00:00, 8.66MB/s]                   \n"
+      "[WDM] - Downloading: 16.9kB [00:00, 4.33MB/s]                   \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading.. .\n",
+      "Downloading.. .\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e2d27636c6f4e60916707b2f69236a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading Blue Lock Episode 22:   0%|          | 0.00/69.0 [00:00<?, ?Mb/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading.. .\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c93dc4aef9c4d68a01fc02d8475ee86",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading Blue Lock Episode 23:   0%|          | 0.00/46.0 [00:00<?, ?Mb/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "All downloads completed succesfully, Senpwai ga saikyou no stando Da MUDA\n"
      ]
     }
@@ -418,7 +470,7 @@
     "#Automates download process\n",
     "#This is some pretty sensitive code especially the file manipulation part, most of it is Supaghetti code and I don't understand how half of it works\n",
     "#Alter at your risk, you have been warned\n",
-    "def DownloadEpisodes(configured_download_links, download_folder_path):\n",
+    "def DownloadEpisodes(configured_download_links, download_folder_path, configured_download_sizes, anime_title):\n",
     "\n",
     "\n",
     "#Installs browser driver manages and checks whether user is using supported browser then creates a webdriver object of the respective browser as a headless browser and returns it\n",
@@ -525,6 +577,39 @@
     "                return 1\n",
     "        return 0\n",
     "    \n",
+    "    def ProgressBar(total_size, download_folder_path, anime_title, index):\n",
+    "        file_tmp = pathlib.Path(download_folder_path).glob(\"*.tmp\")\n",
+    "        file_crdownload = pathlib.Path(download_folder_path).glob(\"*.crdownload\")\n",
+    "\n",
+    "        try:        \n",
+    "            file = next(file_tmp)\n",
+    "\n",
+    "        except:\n",
+    "            try:\n",
+    "                file = next(file_crdownload)\n",
+    "            except:\n",
+    "                return 0\n",
+    "            \n",
+    "        file_path = file.resolve()\n",
+    "\n",
+    "\n",
+    "        with tqdm(total=total_size, unit='Mb', unit_scale=True, desc=f'Downloading {anime_title} Episode {index+1}') as progress_bar:\n",
+    "        # Loop until the download is complete\n",
+    "            download_complete = False\n",
+    "            while not download_complete:\n",
+    "                current_size = os.path.getsize(file_path)/1000000\n",
+    "                # Get the current size of the file being downloaded\n",
+    "                # Calculate the progress of the download\n",
+    "                # Update the progress bar\n",
+    "                progress_bar.update(current_size - progress_bar.n)\n",
+    "                # Check if the download is complete\n",
+    "                if current_size >= total_size:\n",
+    "                    download_complete = True\n",
+    "                # Wait for a short period before checking the file size again\n",
+    "            progress_bar.desc = \"Complete\"\n",
+    "            progress_bar.close()\n",
+    "\n",
+    "        # Hide the progress bar\n",
     "\n",
     "    tmpDeleter(download_folder_path)\n",
     "    \n",
@@ -544,34 +629,29 @@
     "                    files = pathlib.Path(download_folder_path).glob(\"*\")\n",
     "\n",
     "                    #Selenium is used causse of the dynamically generated content\n",
-    "                    try:\n",
-    "                        #get the pahewin predownload page\n",
-    "                        browser_page.get(configured_download_links[index])\n",
-    "                        #wait for the link to be dynamically generated\n",
-    "                        time.sleep(6)\n",
-    "                        #parse the new page with the link to the download page then search for the ddownload link\n",
-    "                        soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
-    "                        server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
-    "                        #get the final download page\n",
+    "                    #get the pahewin predownload page\n",
+    "                    browser_page.get(configured_download_links[index])\n",
+    "                    #wait for the link to be dynamically generated\n",
+    "                    time.sleep(6)\n",
+    "                    #parse the new page with the link to the download page then search for the ddownload link\n",
+    "                    soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
+    "                    server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
+    "                    #get the final download page\n",
     "\n",
-    "                        browser_page.get(server_download_link)                       \n",
-    "                        server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
-    "                        #click the download link by submitting a dynamically generated form\n",
-    "                        browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
-    "                        print(\"Downloading.. .\")\n",
-    "                        #wait for the file being downloaded to reflect in the download folder\n",
+    "                    browser_page.get(server_download_link)                       \n",
+    "                    server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
+    "                    #click the download link by submitting a dynamically generated form\n",
+    "                    browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
+    "                    print(\"Downloading.. .\")\n",
+    "                    #wait for the file being downloaded to reflect in the download folder\n",
+    "                    time.sleep(2)\n",
+    "                    file_count+=1\n",
+    "                    ProgressBar(configured_download_sizes[index], download_folder_path, anime_title, index)\n",
+    "                    while(StillDownloading(download_folder_path)):\n",
     "                        time.sleep(2)\n",
-    "                        file_count+=1\n",
-    "                        wait_time = 0\n",
-    "                        while(StillDownloading(download_folder_path)):\n",
-    "                            time.sleep(2)\n",
-    "                            #if one download takes more than 3 hours then exit\n",
-    "                            wait_time+=2\n",
-    "                            if wait_time > 5400:\n",
-    "                                return 0\n",
     "\n",
-    "                    except:\n",
-    "                        return 0\n",
+    "                        #if one download takes more than 3 hours then exit as a fail\n",
+    "\n",
     "                \n",
     "            else:\n",
     "                #wait before checking for completion again\n",
@@ -591,11 +671,10 @@
     "\n",
     "\n",
     "prompt_reply = input(f\"The total download size is {DownloadSizeCalculator(configured_download_sizes, download_folder_path)} MB\")\n",
-    "prompt_reply = \"yes\"\n",
     "if len([y for y in yes_list if y == prompt_reply]) > 0:\n",
     "    print(\"I will try my best to skip files that are already downloaded, Gambarimasu\")\n",
     "    print(\"Let me cook\")\n",
-    "    print(DownloadStatus(DownloadEpisodes(configured_download_links, download_folder_path)))\n",
+    "    print(DownloadStatus(DownloadEpisodes(configured_download_links, download_folder_path, configured_download_sizes, anime_title)))\n",
     "\n",
     "elif len([n for n in no_list if n == prompt_reply]) > 0:\n",
     "    print(\"Sadge :(\")\n",
@@ -604,10 +683,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ddfd501b803f4dae86099b9771134e87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m4000\u001b[39m):\n\u001b[0;32m      4\u001b[0m     pbar\u001b[39m.\u001b[39mupdate(\u001b[39m1\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.0001\u001b[39;49m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "pbar = tqdm(total=4000)\n",
+    "\n",
+    "for x in range(4000):\n",
+    "    pbar.update(1)\n",
+    "    time.sleep(0.0001)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
